Indent walls around observation rooms